--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
+    "popper.js": "^1.16.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
