--- a/package.json
+++ b/package.json
@@ -7,21 +7,31 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "next": "13.1.1",
     "popper.js": "^1.16.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router": "^6.9.0",
+    "react-router-dom": "^6.9.0",
+    "react-transition-group": "^4.4.5",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@nrwl/cypress": "15.8.7",
     "@nrwl/eslint-plugin-nx": "15.8.7",
+    "@nrwl/jest": "15.8.7",
     "@nrwl/js": "15.8.7",
     "@nrwl/linter": "15.8.7",
+    "@nrwl/next": "^15.8.7",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.8.7",
     "@nrwl/vite": "15.8.7",
     "@nrwl/workspace": "15.8.7",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -30,19 +40,25 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
+    "babel-jest": "^29.4.1",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
+    "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~20.0.3",
     "nx": "15.8.7",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "sass": "^1.55.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "10.9.1",
     "typescript": "~4.9.5",
     "vite": "^4.0.1",
     "vite-plugin-eslint": "^1.8.1",
